--- a/css/index.css
+++ b/css/index.css
@@ -104,3 +104,8 @@
   padding: 12px 50px;
   margin: 0 auto 21px;
 }
+.btn-close {
+  background: transparent url("../images/delete.svg") center/0.7em auto no-repeat;
+  box-shadow: 0px 3px 6px #47546429;
+  border-radius: 50%;
+}
