--- a/css/index.css
+++ b/css/index.css
@@ -20,12 +20,12 @@
 }
 .horizontal-navbar a.active::after {
   content: "";
-  width: 30px;
-  height: 2px;
+  width: 33px;
+  height: 2.75px;
   display: inline-block;
   position: absolute;
   left: 10px;
-  bottom: -6px;
+  bottom: -9px;
   background-color: #2DBDCA;
   border-radius: 10px 10px 0 0;
 
@@ -45,7 +45,7 @@
   padding: 0 15px;
 }
 .heading {
-  font-weight: 700;
+  font-weight: 600;
   font-size: 20px;
   margin-bottom: 30px;
 }
@@ -55,11 +55,13 @@
 .box {
   box-shadow: 0px 0px 16px #698DA738;
   border-radius: 14px;
-  padding: 18px;
+  padding: 27px 18px 18px 18px;
+  height: 100%;
 }
 .pricing-btn {
   color: #FF6600;
   padding: 0;
+  font-size: 12px;
 }
 .modal-dialog {
   margin: .5rem 19px;
@@ -95,6 +97,7 @@
   color: #34B872;
   font-size: 16px;
   text-transform: uppercase;
+  margin-bottom: 0;
 }
 .btn-ok {
   background-color: #FF7500;
@@ -105,7 +108,33 @@
   margin: 0 auto 21px;
 }
 .btn-close {
-  background: transparent url("../images/delete.svg") center/0.7em auto no-repeat;
+  background: white url("../images/delete.svg") center/0.7em auto no-repeat;
   box-shadow: 0px 3px 6px #47546429;
   border-radius: 50%;
+}
+
+.popover-title {
+  font-size: 14px;
+  color: #FF6600;
+  text-align: center;
+  margin-bottom: 12px;
+}
+.popover-pag {
+  font-size: 14px;
+  color: #171E43;
+  text-align: center;
+  margin-bottom: 0;
+}
+.popover {
+  border: 1px solid #E1E5F1;
+  border-radius: 14px;
+  width: 167px;
+  margin: 0 15px;
+  /* inset: auto auto -47px 0px !important; */
+}
+.popover-body {
+  padding: 12px;
+}
+.fw-bold {
+  font-weight: 600 !important;
 }
