--- a/css/index.css
+++ b/css/index.css
@@ -107,10 +107,11 @@
   padding: 12px 50px;
   margin: 0 auto 21px;
 }
-.btn-close {
+.modal-header .btn-close {
   background: white url("../images/delete.svg") center/0.7em auto no-repeat;
   box-shadow: 0px 3px 6px #47546429;
   border-radius: 50%;
+  margin: -.5rem 0 -.5rem auto;
 }
 
 .popover-title {
